--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,8 @@
 body {
   background-color: #fbf1c7;
-  margin: 0;
   color: #3c3836;
+  font-family: system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 .main {
@@ -13,11 +14,34 @@ body {
   text-align: center;
 }
 
+#hostname {
+  float: left;
+  width: 50%;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+#uptime {
+  float: right;
+  width: 50%;
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+.buttons {
+  float: right;
+  width: 50%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 button, select {
   background-color: #689d6a;
+  color: #3c3836;
   border: none;
   border-radius: 3px;
-  padding: 10px 15px;
+  padding: 10px 10px;
+  text-align: center;
   cursor: pointer;
 }
 
@@ -25,8 +49,18 @@ button:hover, select:hover {
   background-color: #8ec07c;
 }
 
+#execute-command {
+  background-color: #d65d0e;
+}
+
+#execute-command:hover {
+  background-color: #fe8019;
+}
+
 .status {
   text-align: left;
+  position: relative;
+  clear: both;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -40,10 +74,6 @@ button:hover, select:hover {
   }
 
   button, select {
-    background-color: #689d6a;
-  }
-
-  button:hover, select:hover {
-    background-color: #427b58;
+    color: #ebdbb2;
   }
 }
