--- a/static/style.css
+++ b/static/style.css
@@ -61,7 +61,7 @@ button:hover, select:hover {
   background-color: #d79921;
 }
 
-.status {
+.system-info {
   position: relative;
   clear: both;
 }
