--- a/static/style.css
+++ b/static/style.css
@@ -8,42 +8,46 @@ body {
 .main {
   background-color: #ebdbb2;
   border-radius: 3px;
+  display: flex;
+  flex-wrap: wrap;
   margin: auto;
-  max-width: 300px;
-  padding: 20px;
+  min-width: 300px;
+  padding: 1em;
+  width: min-content;
+}
+
+.main > * {
+  flex: 1 1 300px;
+}
+
+.header {
+  margin-bottom: 5px;
 }
 
 #hostname {
   float: left;
-  width: 50%;
   text-align: left;
-  margin-bottom: 10px;
+  width: 50%;
 }
 
 #uptime {
   float: right;
-  width: 50%;
   text-align: right;
-  margin-bottom: 10px;
+  width: 50%;
 }
 
 button, select {
   background-color: #689d6a;
-  color: #3c3836;
   border: none;
   border-radius: 3px;
-  padding: 5px 5px;
-  text-align: center;
+  color: #3c3836;
   cursor: pointer;
+  padding: 5px;
+  text-align: center;
 }
 
 button:hover, select:hover {
   background-color: #8ec07c;
-}
-
-.buttons {
-  margin-top: 10px;
-  margin-bottom: 70px;
 }
 
 #select-command {
@@ -61,11 +65,6 @@ button:hover, select:hover {
   background-color: #d79921;
 }
 
-.system-info {
-  position: relative;
-  clear: both;
-}
-
 th, td {
   text-align: right;
 }
@@ -76,6 +75,7 @@ th:first-child, td:first-child {
 
 pre {
   white-space: pre-wrap;
+  margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
