--- a/static/style.css
+++ b/static/style.css
@@ -2,21 +2,22 @@
   --dark-bg: #282828;
   --dark-fg: #ebdbb2;
   --dark-btn: #689d6a;
+  --dark-bg0_h: #1d2021;
   --light-bg: #fbf1c7;
   --light-fg: #3c3836;
-  --light-btn: #8ec07c; /* #d79921 */
+  --light-btn: #d79921;
+  --gray: #928374;
 }
 
 body {
   background-color: var(--light-bg);
   color: var(--light-fg);
   font-family: system-ui, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-  margin: 0;
 }
 
 #main {
   background-color: var(--dark-fg);
-  border-radius: 3px;
+  border: 1px solid var(--gray);
   display: flex;
   flex-wrap: wrap;
   margin: auto;
@@ -48,6 +49,7 @@ body {
 #commands {
   display: flex;
   flex-wrap: wrap;
+  gap: 1px;
 }
 
 #commands > * {
@@ -56,8 +58,7 @@ body {
 
 .command {
   background-color: var(--dark-fg);
-  border: 1px solid var(--dark-bg);
-  border-radius: 3px;
+  border: 1px solid var(--gray);
   color: var(--light-fg);
   cursor: pointer;
   padding: 5px;
@@ -90,10 +91,12 @@ pre {
 
   #main {
     background-color: var(--light-fg);
+    border-color: var(--dark-bg0_h);
   }
 
   .command {
     background-color: var(--light-fg);
+    border-color: var(--dark-bg0_h);
     color: var(--dark-fg);
   }
 
