--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ body {
   flex: 1;
 }
 
+#exec-always {
+  margin-top: 10px;
+}
+
 .command {
   background-color: var(--dark-fg);
   border: 1px solid var(--gray);
@@ -85,6 +89,7 @@ pre {
 
 footer {
   font-size: small;
+  margin-top: 10px;
   text-align: center;
 }
 
@@ -96,28 +101,58 @@ a {
 a:hover {
   color: inherit;
 }
+
+.loader {
+  width: 100%;
+  height: 2px;
+  position: relative;
+  overflow: hidden;
+}
+
+.loader::after {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background: var(--light-btn);
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  animation: hitZak 0.6s ease-in-out infinite alternate;
+}
+
+@keyframes hitZak {
+  0% {
+    left: 0;
+    transform: translateX(-1%);
+  }
+  100% {
+    left: 100%;
+    transform: translateX(-99%);
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: var(--dark-bg);
     color: var(--dark-fg);
   }
-
   #main {
     background-color: var(--light-fg);
     border-color: var(--dark-bg0_h);
   }
-
   .command {
     background-color: var(--light-fg);
     border-color: var(--dark-bg0_h);
     color: var(--dark-fg);
   }
-
   .command:hover {
     background-color: var(--dark-btn);
   }
-
   a {
     color: var(--dark-bg);
+  }
+  .loader::after {
+    background: var(--dark-btn);
   }
 }
